--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <input type="text" id="name" placeholder="الاسم">
     <input type="text" id="lastname" placeholder="اللقب">
     <input type="text" id="year" placeholder="سنة الخروج من الثانوية">
-    <select>
+    <inpu  type="email"id="email"placeholder="البريد الالكتروني">
+    <select id="certificate">
       <option>نوع الشهادة</option>
       <option>شهادة مدرسية</option>
       <option>كشف نقاط</option>
@@ -76,4 +77,5 @@
 </script>
 </body>
 </html>
+
 
