--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       certi: document.getElementById("certificate").value
     };
 
-    emailjs.send("h4zgn7i", "template_73afefm", templateParams)
+    emailjs.send("service_uh6aaju", "template_73afefm", templateParams)
       .then(function() {
         alert("تم إرسال الطلب بنجاح ✅");
       }, function(error) {
@@ -77,5 +77,6 @@
 </script>
 </body>
 </html>
+
 
 
