--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   </form>
 
   <!-- EmailJS -->
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script 
+    src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script>
     (function(){
       emailjs.init("1SEtkBqoQMCQ5Gtw-"); // ضع هنا Public Key الخاص بك
@@ -59,6 +60,7 @@
 
 </body>
 </html>
+
 
 
 
